# hallsim

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  README.txt  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_freeze.txt
configs/: alt_cell_config.json  bench_population.json  bench_population_dallepezze.json  default_cell_config.json  eriq_config.json  saturating_removal_config.json
demos/: _bench_tellurium.py  bench_gradient.py  bench_population.py  composite_population.py  concordance_ddis.py  concordance_reporters.py  gerard2014_xpp.py  gz06_oscillator.py  gz06_population.py  multi_hallmark_baseline.py  multi_hallmark_calibrate.py  multi_hallmark_diagnose_convergence.py  multi_hallmark_figures.py  multi_hallmark_hybrid.py  multi_hallmark_reporter_levels.py  multi_hallmark_schematic.py  multi_hallmark_sweep.py  multi_hallmark_temporal_figure.py  multi_hallmark_trajectories.py  multiscale_coupling_demo.py  outdir.py  run_all_models.py  run_all_sivakumar.py  subsystem_diagnostics.py  validate_sivakumar.py
docs/: architecture.md  calibration.md  coupling-edge-priors.md  crossgen-suggestions.md  dataset.md  design-multiscale-scheduler.md  development.md  eriq-equation-revisions.md  formalism-coverage.md  gz06-basal-p53.md  gz06-population.md  roadmap.md  sbmltoodejax_findings.md
scripts/: build_reference_tables.py  run_ssgsea.py
src/: playground.py  playing_with_NeuralODEs.py  test_microaray_file.py  test_sbml.py  testing_diffrax.py
tests/: conftest.py  test_calibration.py  test_cell.py  test_composition.py  test_coupling_wiring.py  test_damage_nfkb.py  test_damage_p53_eriq.py  test_diagnostics.py  test_eriq.py  test_eriq_composable.py  (+13 more)
(+73 files in other folders)
