[build-system]
requires      = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "hallsim"
version         = "0.1.0"
description     = "HallSim: cell-agent simulator of Hallmarks of Aging"
readme          = "README.md"
requires-python = ">=3.9"
dependencies    = [
  "numpy",
  "scipy",
  "pandas",
  "click",
  "jax",
  "diffrax",
  "optax",
  "equinox",
  "pint",
  "networkx",
  "sbmltoodejax",
  "tqdm",
]

[project.optional-dependencies]
dev = ["pytest", "black", "pre-commit", "flake8", "matplotlib"]

[project.urls]
Documentation = "https://github.com/BabaJaguska/HallSim#readme"

[project.scripts]
simulate = "hallsim.cli:simulate"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: tests that take more than ~10s (typically multi-process Scheduler runs); deselect with '-m \"not slow\"'",
  "network: tests that need network access or un-bundled SBML downloads; deselected in CI via '-m \"not network\"'",
]
